# universal-time

./: CHANGELOG.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: custom.rs  standard.rs
src/: global.rs  instant.rs  lib.rs  system.rs
tests/: time_api.rs
